--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -2,11 +2,9 @@ version : 2
 mergeable :
   - when : pull_request.*
     varidate :
-      # WIP から始まるプルリクエストをマージできないようにする
-      - do : title
+      - do : title # WIP から始まるプルリクエストをマージできないようにする
         must_exclude : 
           regex : ^\[WIP\]
-      # wip ラベルが付いているプルリクエストをマージできないようにする
-      - do : label
+      - do : label # wip ラベルが付いているプルリクエストをマージできないようにする
         must_exclude : 
           regex : 'wip'
