--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -2,9 +2,9 @@ version : 2
 mergeable :
   - when : pull_request.*
     validate :
-      - do : title # WIP から始まるプルリクエストをマージできないようにする
+      - do : title # WIP または [WIP] から始まるプルリクエストをマージできないようにする
         must_exclude : 
-          regex : ^\[WIP\]
+          regex : ^WIP|^\[WIP\]
       - do : label # wip ラベルが付いているプルリクエストをマージできないようにする
         must_exclude : 
           regex : 'wip'
